fix: get first element in the list with .get(0)
List::getFirst is not introduced until Java 21